release: bump version to 0.60.0